Add application service for template section

--- a/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
@@ -16,6 +16,9 @@
     border-bottom-right-radius: 5px;
     border-bottom: none !important;
   }
+  h1.title {
+    margin-top: 0
+  }
 
   .edit-title {
     height: 60px;
