--- a/client/src/app/pages/profile/user-profile/template-section/template-section.component.html
+++ b/client/src/app/pages/profile/user-profile/template-section/template-section.component.html
@@ -1,4 +1,4 @@
-<ng-container>
+<ng-container *ngIf="!isLoading">
 
   <div class="edit-title">
   </div>
@@ -144,6 +144,13 @@
     <p>You may not use, or encourage, promote, facilitate, instruct or induce others to use, yourCareerFair or Site Services for any activities that violate any law, statute, ordinance or regulation; for any other illegal or fraudulent purpose or any purpose that is harmful to others; or to transmit, store, display, distribute or otherwise make available content that is illegal, fraudulent or harmful to others.</p>
     <h4>How You Can Contact Us about Privacy Questions</h4>
     <p>If you have questions or concerns regarding this Privacy Notice, you should contact us by using our company’s contact information.</p>
+  </div>
+</ng-container>
+
+<ng-container *ngIf="isLoading">
+  <div class="loading">
+    <mat-spinner></mat-spinner>
+    <h4>Loading...</h4>
   </div>
 </ng-container>
   
