--- a/client/src/app/pages/profile/user-profile/template-section/template-section.component.html
+++ b/client/src/app/pages/profile/user-profile/template-section/template-section.component.html
@@ -4,13 +4,16 @@
   </div>
 
   <h1 class="title">Application Template</h1>
-  <p>Note that no individual may view this application template other than yourself and the recruiters managing positions you've applied to. Please fill these forms out in order to apply to positions on this site. Once completed you will not be asked for this information again.</p>
+  <p>Note that no individual may view this application template other than yourself and the recruiters managing positions you've applied to. Please fill these forms out in order to apply to positions on this site. Once completed you will not be asked for this information again.<br><br></p>
 
-  <div class="row">
+  <div *ngIf="workAuth" class="row">
     <h3>Work Authorization</h3>
     <p>Are you authorized to work in the United States</p>
+    <round-checkbox id="work-auth" [title]="workAuth.work_auth === 1 ? 'Yes' : 'No'" [checked]="workAuth.work_auth === 1" [active]="editMode"></round-checkbox>
     <p>What type of authorization do you maintain (if applicable)?</p>
+    <round-checkbox id="proof-auth" [title]="workAuth.proof_auth ? workAuth.proof_auth : 'None'" [checked]="workAuth.proof_auth !== null" [active]="editMode"></round-checkbox>
     <p>Will you ever require support to acquire a work visa or a U.S citizenship?</p>
+    <round-checkbox id="visa-support" [title]="workAuth.visa_support === 1 ? 'Yes' : 'No'" [checked]="workAuth.visa_support === 1" [active]="editMode"></round-checkbox>
   </div>
   <div class="row">
     <h3>Military Service</h3>
@@ -21,36 +24,9 @@
     An "Armed forces service medal veteran" means a veteran who, while serving on active duty in the U.S. military, ground, naval or air service, participated in a United States military operation for which an Armed Forces service medal was awarded pursuant to Executive Order 12985.<br><br>
     *If you believe you belong to any of the categories of protected veterans listed above, please indicate by checking the appropriate box below. As a Government contractor subject to VEVRAA, we request this information in order to measure the effectiveness of the outreach and positive recruitment efforts we undertake pursuant to VEVRAA.<br><br>
     Submission of this information is voluntary and refusal to provide it will not subject you to any adverse treatment. The information provided will be used only in ways that are not inconsistent with VEVRAA as amended. We are an equal opportunity employer. We do not discriminate in hiring or employment against any individual on the basis of race, color, gender, national origin, ancestry, religion, physical or mental disability, age, veteran status, sexual orientation, gender identity or expression, marital status, pregnancy, citizenship, or any other factor protected by anti-discrimination laws.</p>
-  </div>
-
-  <div class="row">
-    <h3>Disability Self-Identification</h3>
-    <p>Why are you being asked to complete this form? Because company’s you apply to may do business with the government, as such said companies must reach out to, hire, and provide equal opportunity to qualified people with disabilities.[1] To help us measure how well we and our partner companies are doing, we are asking you to tell us if you have a disability or if you ever had a disability. Completing this form is voluntary, but we hope that you will choose to fill it out. If you are applying for a job, any answer you give will be kept private and will not be used against you in any way.<br><br>
-    If you already work for us, your answer will not be used against you in any way. Because a person may become disabled at any time, we are required to ask all of our employees to update their information every five years. You may voluntarily self-identify as having a disability on this form without fear of any punishment because you did not identify as having a disability earlier.<br><br>
-    How do I know if I have a disability?<br>
-    You are considered to have a disability if you have a physical or mental impairment or medical condition that substantially limits a major life activity, or if you have a history or record of such an impairment or medical condition.
-    </p>
-    <span>Disabilities include, but are not limited to:</span>
-    <ul>
-      <li>Blindness</li>
-      <li>Deafness</li>
-      <li>Cancer</li>
-      <li>Diabetes</li>
-      <li>Epilepsy</li>
-      <li>Autism</li>
-      <li>Cerebral palsy</li>
-      <li>HIV/AIDS</li>
-      <li>Schizophrenia</li>
-      <li>Muscular dystrophy</li>
-      <li>Bipolar disorder</li>
-      <li>Major depression</li>
-      <li>Multiple sclerosis (MS)</li>
-      <li>Missing limbs or partially missing limbs</li>
-      <li>Post-traumatic stress disorder (PTSD)</li>
-      <li>Obsessive compulsive disorder</li>
-      <li>Impairments requiring the use of a wheelchair</li>
-      <li>Intellectual disability (previously called mental retardation)</li>
-    </ul>
+    <mat-divider></mat-divider>
+    <p>Response</p>
+    <!-- <round-checkbox id="military-service" [title]="workAuth.visa_support === 1 ? 'Yes' : 'No'" [checked]="workAuth.visa_support === 1" [active]="editMode"></round-checkbox> -->
   </div>
 
   <div class="row">
