--- a/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
@@ -68,6 +68,13 @@
       margin-bottom: 10px;
     }
   }
+  round-checkbox {
+    &#work-auth,
+    &#proof-auth,
+    &#visa-support {
+      justify-content: flex-start;
+    }
+  }
   simple-tag {
     display: inline-flex;
     margin: 10px 10px 5px 0;
