--- a/client/src/app/components/round-checkbox/round-checkbox.component.scss
+++ b/client/src/app/components/round-checkbox/round-checkbox.component.scss
@@ -36,6 +36,14 @@
     background-image: url('/assets/icons/ic_checkbox_indeterminate.svg');
   }
 
+  &.template-section {
+    @include flex(row, center, flex-start);
+    label.title {
+      font-size: 16px;
+      color: map-get($md-cfaccent, 500);
+    }
+  }
+
   @media only screen and (max-width: $tablet-breakpoint) {
     height: 18px;
     label.icon {
