--- a/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
@@ -68,6 +68,12 @@
       margin-bottom: 10px;
     }
   }
+  ul.criminal {
+    padding-left: 20px;
+    & > li {
+      list-style: decimal;
+    }
+  }
   simple-tag {
     display: inline-flex;
     margin: 10px 10px 5px 0;
