--- a/client/src/app/components/round-checkbox/round-checkbox.component.scss
+++ b/client/src/app/components/round-checkbox/round-checkbox.component.scss
@@ -37,7 +37,8 @@
   }
 
   &.template-section {
-    @include flex(row, center, flex-start);
+    height: auto;
+    display: inline-block;
     label.title {
       font-size: 16px;
       color: map-get($md-cfaccent, 500);
@@ -46,6 +47,9 @@
 
   @media only screen and (max-width: $tablet-breakpoint) {
     height: 18px;
+    &.template-section {
+      height: auto;
+    }
     label.icon {
       height: 18px;
       width: 18px;
