Changed user pic position in recruiter section and linked job detail page.

--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -573,11 +573,9 @@ action-button {
           img{
             width: 35px;
             height: 35px;
-            margin-left: 10px;
+            margin-right: 10px;
             vertical-align: middle;
             border-radius: 100%;
-            float: right;
-        
           }
 
       }
