--- a/client/src/app/pages/positions/position-search/position-search.component.html
+++ b/client/src/app/pages/positions/position-search/position-search.component.html
@@ -125,8 +125,9 @@
                             <mat-option *ngFor="let recruiter of autocomplete_recruiter"
                                 value="{{recruiter.first_name }} {{  recruiter.last_name}}  "
                                 (onSelectionChange)="onChangeRecruiter(recruiter)" class="recruiter_option">
-                                <span>{{recruiter.first_name}} {{recruiter.last_name}} </span> <img class="userimg"
+                                <img class="userimg"
                                     src="{{recruiter?.photo ? recruiter.photo : 'assets/icons/no_photo.png'}}">
+                                <span>{{recruiter.first_name}} {{recruiter.last_name}} </span>
                             </mat-option>
                         </mat-autocomplete>
                     </mat-form-field>
@@ -321,27 +322,28 @@
                         <div *ngIf="job.showMoreFlag">
                             <div class="qualification-level-m">
                                 <h5>Qualification Level Estimate Breakdown</h5>
-
-                                <simple-tag *ngIf="job.true_fitscore_info?.skills_weight" type="gray"
-                                    title="Skills Match" ellipseTag="true"
-                                    value="{{mathFloor(6*job.true_fitscore_info?.skills_fitscore)}}">
-                                </simple-tag>
-                                <simple-tag *ngIf="job.true_fitscore_info?.experience_weight" type="gray"
-                                    title="Experience Match" ellipseTag="true"
-                                    value="{{mathFloor(6*job.true_fitscore_info?.experience_fitscore)}}">
-                                </simple-tag>
-                                <simple-tag *ngIf="job.true_fitscore_info?.education_weight" type="gray"
-                                    title="Education Match" ellipseTag="true"
-                                    value="{{mathFloor(6*job.true_fitscore_info?.education_fitscore)}}">
-                                </simple-tag>
-                                <simple-tag *ngIf="job.true_fitscore_info?.interests_weight" type="gray"
-                                    title="Interests Match" ellipseTag="true"
-                                    value="{{mathFloor(6*job.true_fitscore_info?.interests_fitscore)}}">
-                                </simple-tag>
-                                <simple-tag *ngIf="job.minimum_skills" type="gray" title="Required Skills Match"
-                                    ellipseTag="true"
-                                    value="{{mathFloor(6*job.true_fitscore_info?.required_skills_fitscore)}}">
-                                </simple-tag>
+                                
+                                    <simple-tag *ngIf="job.true_fitscore_info?.skills_weight" type="gray"
+                                        title="Skills Match" ellipseTag="true"
+                                        value="{{mathFloor(6*job.true_fitscore_info?.skills_fitscore)}}">
+                                    </simple-tag>
+                                    <simple-tag  *ngIf="job.true_fitscore_info?.experience_weight" type="gray"
+                                        title="Experience Match" ellipseTag="true"
+                                        value="{{mathFloor(6*job.true_fitscore_info?.experience_fitscore)}}">
+                                    </simple-tag>
+                                    <simple-tag *ngIf="job.true_fitscore_info?.education_weight" type="gray"
+                                        title="Education Match" ellipseTag="true"
+                                        value="{{mathFloor(6*job.true_fitscore_info?.education_fitscore)}}">
+                                    </simple-tag>
+                                    <simple-tag *ngIf="job.true_fitscore_info?.interests_weight" type="gray"
+                                        title="Interests Match" ellipseTag="true"
+                                        value="{{mathFloor(6*job.true_fitscore_info?.interests_fitscore)}}">
+                                    </simple-tag>
+                                    <simple-tag *ngIf="job.minimum_skills" type="gray" title="Required Skills Match"
+                                        ellipseTag="true"
+                                        value="{{mathFloor(6*job.true_fitscore_info?.required_skills_fitscore)}}">
+                                    </simple-tag>
+                                
                                 <p
                                     *ngIf="!job.true_fitscore_info ||  (job.true_fitscore_info && !job.true_fitscore_info.skills_weight && !job.true_fitscore_info.experience_weight && !job.true_fitscore_info.education_weight && !job.true_fitscore_info.interests_weight && !job.minimum_skills)">
                                     N/A
@@ -363,8 +365,8 @@
                         <action-button routerLink="." type="text" title="{{!job.showMoreFlag ? 'Show More' :
                     'Show Less'}}" color="primary" (click)="job.showMoreFlag = !job.showMoreFlag"></action-button>
                         &nbsp;&nbsp;
-                        <action-button type="text" title="Goto Details Page" color="primary" routerLink="."
-                            *ngIf="job.showMoreFlag"></action-button>
+                        <action-button type="text" title="Go to Details Page" color="primary"
+                            routerLink="../position/{{job.position_id}}" *ngIf="job.showMoreFlag"></action-button>
 
 
                     </div>
