--- a/client/src/app/pages/positions/position-search/position-search.component.scss
+++ b/client/src/app/pages/positions/position-search/position-search.component.scss
@@ -146,7 +146,7 @@ $profile-form-field-mt: 30px;
                         color: rgba(map-get($md-cfaccent, 500), .84);
                         margin-top: 0;
                         font-family: "Poppins", sans-serif;
-                        
+                        cursor: pointer;
                         font-weight: 600;
                     }
 
@@ -335,7 +335,7 @@ $profile-form-field-mt: 30px;
                 & .qualification-level-m {
                     & simple-tag {
                         @include inline-block-btn;
-                        margin: 12px auto 22px;
+                        margin: 12px 5px 22px 0px;
                         font-family: "Poppins", sans-serif;
                         font-weight: 400;
                     }
@@ -431,7 +431,7 @@ $profile-form-field-mt: 30px;
             position: -webkit-sticky;
             top: 80px;
             overflow-y: scroll;
-            height: calc(100vh - 80px);
+            height: calc(100vh - 210px);
             &::-webkit-scrollbar{
                 width: 0;
                 background-color: transparent;
@@ -958,6 +958,16 @@ $profile-form-field-mt: 30px;
                                 }
                             }
                         }
+                    }
+
+                    & .qualification-level-m {
+                        & simple-tag {
+                            @include inline-block-btn;
+                            margin: 0px 5px 7px 0px;
+                            font-family: "Poppins", sans-serif;
+                            font-weight: 400;
+                        }
+    
                     }
 
 
